[project]
name = "torchani"
authors = [
    {name = "Ignacio Pickering", email = "ign.pickering@gmail.com"},
    {name = "Xiang Gao", email = "qasdfgtyuiop@gmail.com"},
    {name = "Jinze Xue", email = "jinzexue@chem.ufl.edu"},
]
description = "Partial published version of some TorchANI features needed for LEGOLAS"
readme = "README.md"
keywords = []
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.8"
dependencies = [
    "torch==2.5.*",
    "numpy==2.1.*",
    "typing_extensions>=4.0.0",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/roitberg-group/internal-legolas-aev"

# NOTE: If installed with build isolation torch can't be accessed and
# the CUDA and C++ extensions can't be compiled
[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["torchani*"]

[tool.setuptools_scm]
version_file = "torchani/_version.py"
fallback_version="0.0.0"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
filterwarnings = "ignore:.*distutils Version classes are deprecated.*:DeprecationWarning"
